...
    }

    // MARK: - Predefined Errors

    private func getNoInternetError() -> NSError {
        return NSError(domain: NSURLErrorDomain, code: NSURLErrorNotConnectedToInternet,
                       userInfo: [ NSLocalizedDescriptionKey: "Mocked Internet connection appears to be offline."])
    }

    // MARK: - API

    public override func dataTask(with request: URLRequest,
                           completionHandler: @escaping (Data?, URLResponse?, Error?) -> Void) -> URLSessionDataTask {
...
            return nextDownloadTask
    }

    // MARK: - Stub

    private func getStubbedResponseIfAvailable(for request: URLRequest) -> DataResponse? {
        guard ProcessInfo.processInfo.environment["Offline"] == nil else { // used for UI testing
            return (nil, nil, getNoInternetError())
        }

        if let http404url = ProcessInfo.processInfo.environment["http404url"] {
            if let reqURL = request.url?.absoluteString, reqURL == http404url {
                return (data: nil,
...
