...
        label.widthAnchor.constraint(equalToConstant: 60).isActive = true
        return label
    }()

    private let loginButton: UIButton = {
        let button = UIButton()
        button.setTitle("LOGIN", for: .normal)
        button.backgroundColor = AppAppearance.Color.ThemeColor
        button.setTitleColor(AppAppearance.Color.TintColor, for: .normal)
        button.addTarget(self, action: #selector(LoginViewController.loginTapped), for: .touchUpInside)
        button.translatesAutoresizingMaskIntoConstraints = false
        return button
    }()
...
