...
        tableView.separatorColor = UIColor.clear
        tableView.rowHeight = UITableView.automaticDimension
        tableView.estimatedRowHeight = 200
        tableView.delegate   = self
        tableView.dataSource = self
        tableView.allowsSelection = false
        tableView.accessibilityIdentifier = "commentsTable"
        tableView.scrollsToTop = true
    }

    private func setupLoadingIndicator() {
        loadingIndicator = UIActivityIndicatorView(style: .large)
        loadingIndicator.color = PostsFeature.shared.appearance?.mainColor
...
